[spring] Merged master to upgrade gradle/ spring
* Upgraded/Removed other dependencies
* Resolved issues after upgrades
* Added code to leave cassandra container running, when no access